[project]
name = "cyber-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "crawl4ai>=0.6.3",
    "diskcache>=5.6.3",
    "docling>=2.36.1",
    "fastapi>=0.115.9",
    "html2text>=2025.4.15",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
